<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.95"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/app_title"
            android:textSize="@dimen/header_1"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/welcomeMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textSize="@dimen/regular_font_size"
            android:layout_marginBottom="15dp"
            android:gravity="center"/>

        <AutoCompleteTextView
            android:id="@+id/searchInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="street-address"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/search"
            android:layout_marginBottom="15dp"
            android:elevation="0dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/searchesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_results"
            android:textAlignment="center"
            android:textSize="@dimen/header_2" />

        <TextView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_recent"
            android:textSize="@dimen/regular_font_size"
            android:textAlignment="center"
            android:layout_marginBottom="50dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editBtn"/>
            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/edit_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchBtn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/latLongHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latlong_header"
            android:textAlignment="center"
            android:textSize="@dimen/header_2"/>

        <TextView
            android:id="@+id/longLatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latlong_placeholder"
            android:textSize="@dimen/regular_font_size"
            android:textAlignment="center"/>
    </LinearLayout>

</FrameLayout>