<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer">

        <TextView
            android:id="@+id/nowEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_editing"
            android:textSize="@dimen/header_1"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/editTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="@dimen/header_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/nowEditing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/addressHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/header_2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/streetAddressInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="street-address"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/address"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:id="@+id/latHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_header"
            android:textSize="@dimen/header_2"/>

        <EditText
            android:id="@+id/latInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/lat_header"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:id="@+id/longHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_header"
            android:textSize="@dimen/header_2"/>

        <EditText
            android:id="@+id/longInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/long_header"
            android:layout_marginBottom="25dp"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/save_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancelBtn"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/cancel_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/saveBtn"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>